# Distributed-Control-System-Architecture

./: .gitignore  CMakeLists.txt  Contributing.md  Docker File  License  Project Structure  README.md  module_tests.cpp
examples/: temperature_control.cpp
include/dcs/: control_system.h  module.h
workflows/: ci.yml
